# NNBSS

./: CMakeLists.txt  LICENSE.md  README.md  RTSP_Stream.md
Code/: CMakeLists.txt
Code/NNBSSAI/Management/: AISectorManager.h
Code/NNBSSAI/VisualInputOutput/FaceRecognition/: FaceRecognitionBase.cpp  FaceRecognitionBase.h
Code/NNBSSAI/VisualInputOutput/ObjectDetection/: ObjectDetectionBase.cpp  ObjectDetectionBase.h
Code/NNBSSAI/VisualInputOutput/OpticalCharacterRecognition/: OCRBase.cpp  OCRBase.h
Code/NNBSSBridge/: MainBridge.cpp  MainBridge.h
Code/NNBSSGlobal/: TypeDef.h
Code/NNBSSNetwork/Kit/: InputBuffer.h  LockFreeSpsc.h  Math.h  TimeLogger.h
Code/NNBSSNetwork/Management/: NetworkSectorManager.h
Code/NNBSSNetwork/Protocol/TestKit/: CountdownTimer.h  InputBuffer.h  LockFreeSpsc.h  Logger.h  OpenCVUtils.h  Receiver.cpp  Receiver.h  Sender.cpp  VideoWindow.h
Code/NNBSSNetwork/Protocol/UDP/: StreamReceiver.cpp  StreamReceiver.h  StreamSender.cpp  StreamSender.h
Code/NNBSSRender/Convertors/: convertmattowxbmp.cpp  convertmattowxbmp.h
Code/NNBSSRender/Convertors/Serialization/: SerializeMat.cpp  SerializeMat.h
Code/NNBSSRender/ImageProcessing/: BrightnessContrast.cpp  BrightnessContrast.h  DisplayResolution.cpp  DisplayResolution.h  Histogram.cpp  Histogram.h  ImageProcessing.h
Code/NNBSSRender/Management/: RenderSectorManager.h
Code/NNBSSRender/Threads/MovingVisualMediaThread/: MovingVisualMediaThread.cpp  MovingVisualMediaThread.h
Code/NNBSSRender/Threads/MovingVisualMediaWriterThread/: MVMWriterThread.cpp  MVMWriterThread.h
Code/NNBSSSystem/Authorization/: Authorization.cpp  Authorization.h
Code/NNBSSSystem/Codec/Video/: FFMPEGCodec.h  FourCC.cpp  FourCC.h
Code/NNBSSSystem/Localization/: Localization.cpp  Localization.h
Code/NNBSSSystem/Management/: SystemSectorManager.h
Code/NNBSSSystem/XML/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
Code/NNBSSUI/: GlobalDeclarations.h
Code/NNBSSUI/Background/DynamicVariables/: GlobalStructures.h
Code/NNBSSUI/Background/Management/: ClassManager.cpp  ClassManager.h
Code/NNBSSUI/Background/Management/AttachmentUnitInterface/: AUIManager.cpp  AUIManager.h
Code/NNBSSUI/Background/NNBSSApp/: NNBSSApp.cpp  NNBSSApp.h
Code/NNBSSUI/Background/NNBSSUX/: NNBSSUX.cpp  NNBSSUX.h
Code/NNBSSUI/Bridge/: AbstractUIEvents.cpp  AbstractUIEvents.h
Code/NNBSSUI/Bridge/Behaviour/: LineFlowGlobal.cpp  LineFlowGlobal.h  README.md
Code/NNBSSUI/Core/: Hardware.cpp  Hardware.h  WorkerThread.cpp  WorkerThread.h
Code/NNBSSUI/GUI/ArtProvider/: NNBSSArtProvider.h
Code/NNBSSUI/GUI/Components/: README.md
Code/NNBSSUI/GUI/Components/ContentPanel/: ContentPanel.cpp  ContentPanel.h
Code/NNBSSUI/GUI/Components/ControlPanel/: ControlPanel.cpp  ControlPanel.h
Code/NNBSSUI/GUI/Components/DeviceStatusBar/: DeviceStatusBar.cpp  DeviceStatusBar.h
Code/NNBSSUI/GUI/Objects/BaseClasses/GridViewPanel/: GridViewPanel.cpp  GridViewPanel.h
Code/NNBSSUI/GUI/Objects/BitmapPanel/: BitmapPanel.cpp  BitmapPanel.h
Code/NNBSSUI/GUI/Objects/CameraGrid/: CameraGrid.cpp  CameraGrid.h
Code/NNBSSUI/GUI/Objects/Controls/Button/: Button.cpp  Button.h
Code/NNBSSUI/GUI/Objects/Controls/CheckBox/: CheckBox.cpp  CheckBox.h
Code/NNBSSUI/GUI/Objects/Controls/DraggableHeader/: DraggableHeader.cpp  DraggableHeader.h
Code/NNBSSUI/GUI/Objects/Controls/Knob/: Knob.cpp  Knob.h
Code/NNBSSUI/GUI/Objects/Controls/Slider/: Slider.cpp  Slider.h
Code/NNBSSUI/GUI/Objects/Controls/StaticBox/: StaticBox.cpp  StaticBox.h
Code/NNBSSUI/GUI/Objects/DetectionSamplesList/: DetectionSamplesList.cpp  DetectionSamplesList.h
Code/NNBSSUI/GUI/Objects/DeviceList/: DeviceList.cpp  DeviceList.h
Code/NNBSSUI/GUI/Objects/DeviceProperties/: DeviceProperties.cpp  DeviceProperties.h
Code/NNBSSUI/GUI/Objects/Dialogs/AddCameraDialog/: AddCameraDialog.cpp  AddCameraDialog.h
Code/NNBSSUI/GUI/Objects/Dialogs/AddDeviceDialog/: AddDeviceDialog.cpp  AddDeviceDialog.h
Code/NNBSSUI/GUI/Objects/Dialogs/GridViewEditDialog/: GridViewEditDialog.cpp  GridViewEditDialog.h
Code/NNBSSUI/GUI/Objects/LogIn/: LogIn.cpp  LogIn.h
Code/NNBSSUI/GUI/Objects/MenuBar/Pages/: AboutPage.cpp  AboutPage.h  OptionsPage.cpp  ViewPage.cpp  ViewPage.h
Code/NNBSSUI/GUI/Objects/NotificationList/: NotificationList.cpp  NotificationList.h
Code/NNBSSUI/GUI/Objects/Notifications/: Notifications.cpp  Notifications.h  NotificationsManager.cpp  NotificationsManager.h
Code/NNBSSUI/GUI/Objects/Playback/: playback.cpp  playback.h
Code/NNBSSUI/GUI/Objects/Profiles/: Profiles.cpp  Profiles.h
Code/NNBSSUI/GUI/Objects/StandaloneFrames/StandaloneCameraFrame/: StandaloneCameraFrame.cpp  StandaloneCameraFrame.h
Code/NNBSSUI/GUI/Objects/TitleBar/: TitleBar.cpp  TitleBar.h
Code/NNBSSUI/GUI/Objects/wxFlatNotebook/: fnb_customize_dlg.cpp  fnb_resources.cpp  popup_dlg.cpp  renderer.cpp  wxFlatNotebook.cpp  xh_fnb.cpp
Code/NNBSSUI/GUI/Objects/wxFlatNotebook/headers/: wxFlatNotebook.h  xh_fnb.h
